# apcragg-blog

./: .gitignore  build.py  pyproject.toml
static/: style.css
templates/: base.html  post.html
